--- a/slide/package.json
+++ b/slide/package.json
@@ -5,12 +5,16 @@
   "scripts": {
     "build": "slidev build",
     "dev": "slidev --open",
-    "export": "slidev export"
+    "export": "slidev export",
+    "check": "biome check --write ./"
   },
   "dependencies": {
     "@slidev/cli": "^51.8.2",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
     "vue": "^3.5.16"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.9.4"
   }
 }
